--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
 
 <body>
     <h1>Odin Recipies</h1>
-    <a href="./recipies/lasagnia.html">lasagnia</a>
+    <img src="./images/recipies.jpg" alt="Cover Photo" width="500 px"><br>
+    <ol>
+    <li><a href="./recipies/lasagnia.html"><h2><strong>Lasagnia</strong></h2></a></li>
+    <li><a href="./recipies/burger.html"><h2><strong>Burger</strong></h2></a></li>
+    <li><a href="./recipies/coffee-shake.html"><h2><strong>Coffee Shake</strong></h2></a></li>
+    </ol>
+    <br>
+    <a href="#top">Return to Top</a>
 </body>
 
 </html>
