--- a/recipies/lasagnia.html
+++ b/recipies/lasagnia.html
@@ -2,13 +2,14 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>lasagnia Recipie</title>
+        <title>Lasagnia Recipie</title>
+    </head>
         <body>
             <h1>Lets make Lasagna!</h1>
             <img src="../images/lasagnia.jpg" alt="Lasagnia" height="400 px">
             <h2>Description</h2>
             <p>
-                I’m sure everyone has their own favorite go-to lasagna recipe, 
+                I’m sure everyone has their own <em>favorite</em> go-to lasagna recipe, 
                 but I’d just like to offer that this really is The Best Lasagna Ever. 
                 Growing up, my mom and her friends used to make it for potlucks and gatherings, 
                 and part of its appeal is that the ingredients used are totally basic; 
@@ -38,7 +39,8 @@
                 <li>2 tbsp. dried basil</li>
                 <li>2 1/2 tsp. salt</li>
             </ol>
+            <br>
+            <a href="#top">Return to Top</a><br>
+            <a href="../index.html">Return to Main Page</a>
         </body>
-
-    </head>
 </html>
