--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <h1>Odin Recipies</h1>
+    <h1>Kya Khaye ga Bakhi?</h1>
     <img src="./images/recipies.jpg" alt="Cover Photo" width="500 px"><br>
     <ol>
     <li><a href="./recipies/lasagnia.html"><h2><strong>Lasagnia</strong></h2></a></li>
